[gd_scene load_steps=98 format=3 uid="uid://y84d1fkp4cry"]

[ext_resource type="Script" path="res://script/filed_manager.gd" id="1_6ow38"]
[ext_resource type="Script" path="res://script/state_manager.gd" id="1_7df2t"]
[ext_resource type="Shader" path="res://test/field_scene.gdshader" id="1_jikfa"]
[ext_resource type="Script" path="res://script/top_left_button.gd" id="2_c3gvt"]
[ext_resource type="Texture2D" uid="uid://bgmnqusbnsq33" path="res://assert/cursor.png" id="2_xy56k"]
[ext_resource type="Texture2D" uid="uid://wgbnkjv0trj5" path="res://test/123.png" id="3_3qlga"]
[ext_resource type="Script" path="res://script/bottom_button.gd" id="3_f7b5f"]
[ext_resource type="Script" path="res://script/cursor.gd" id="4_2i84w"]
[ext_resource type="Script" path="res://script/harvest_button.gd" id="4_gunxn"]
[ext_resource type="Script" path="res://scene/cancel_timer_button.gd" id="5_8mr6h"]
[ext_resource type="Texture2D" uid="uid://coqdriybb3213" path="res://assert/top_left_button.png" id="5_tdjih"]
[ext_resource type="PackedScene" uid="uid://bj8rxrkwnxaha" path="res://test/time_lable.tscn" id="7_88jv1"]
[ext_resource type="PackedScene" uid="uid://dssmubdwges61" path="res://test/dock_animation.tscn" id="7_ex8uh"]
[ext_resource type="Texture2D" uid="uid://bxulqnyewwby2" path="res://test/dock_background7.png" id="7_qbutg"]
[ext_resource type="Texture2D" uid="uid://car5vkm3y1tnt" path="res://assert/Teemo Basic emote animations sprite sheet.png" id="8_400w7"]
[ext_resource type="Script" path="res://script/Camera2D.gd" id="9_hj7l2"]
[ext_resource type="Texture2D" uid="uid://c8ip1xby8l5my" path="res://test/box.png" id="9_j88sr"]
[ext_resource type="Texture2D" uid="uid://bo7sexrul1rl8" path="res://assert/Water.png" id="10_16vgn"]
[ext_resource type="Texture2D" uid="uid://c6ys854exs4yq" path="res://test/cancel_timer.png" id="11_7pt45"]
[ext_resource type="Texture2D" uid="uid://b51sotpby8rnc" path="res://test/harvest_box_out_line.png" id="13_ixhkl"]
[ext_resource type="Texture2D" uid="uid://cwd3o7fbasocx" path="res://test/harvest_anima.png" id="14_5l2du"]
[ext_resource type="Texture2D" uid="uid://detslj0spn6x5" path="res://test/1234.png" id="14_pikh5"]
[ext_resource type="Script" path="res://scene/settalment_box.gd" id="16_1x6et"]
[ext_resource type="Texture2D" uid="uid://ccs1q4y6rghpm" path="res://test/settalment_pannel.png" id="16_vuc7v"]
[ext_resource type="Script" path="res://scene/emoji.gd" id="19_vg7v8"]
[ext_resource type="Texture2D" uid="uid://bgfg2cr76482j" path="res://test/emo_box.png" id="19_w5igd"]
[ext_resource type="Texture2D" uid="uid://52gygrhclw3q" path="res://test/time_top.png" id="20_svcwf"]
[ext_resource type="Script" path="res://scene/timer_selcet.gd" id="22_y6tqa"]
[ext_resource type="Texture2D" uid="uid://bp3b18iewhg3v" path="res://test/timer_select.png" id="23_vayfk"]
[ext_resource type="Texture2D" uid="uid://bfo52m1qya5fm" path="res://test/select_timer_lable.png" id="24_0h6yf"]
[ext_resource type="Texture2D" uid="uid://dl1pt1jbomeu8" path="res://test/select your timer.png" id="24_hkyps"]
[ext_resource type="Script" path="res://scene/select_timer_pannel.gd" id="25_q83ki"]
[ext_resource type="Texture2D" uid="uid://uvdum5f4xmg4" path="res://test/chicken default.png" id="30_ueden"]
[ext_resource type="Texture2D" uid="uid://dcawb8vfcyd7k" path="res://test/rabbit_animation.png" id="34_bmbyj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ek8lc"]
shader = ExtResource("1_jikfa")
shader_parameter/speed = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxim"]
atlas = ExtResource("14_5l2du")
region = Rect2(0, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mph6p"]
atlas = ExtResource("14_5l2du")
region = Rect2(32, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxa5n"]
atlas = ExtResource("14_5l2du")
region = Rect2(64, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys2yp"]
atlas = ExtResource("14_5l2du")
region = Rect2(96, 0, 32, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_gfi1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mph6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxa5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys2yp")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_44u2k"]
atlas = ExtResource("8_400w7")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36c1e"]
atlas = ExtResource("8_400w7")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xurv3"]
atlas = ExtResource("8_400w7")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekugk"]
atlas = ExtResource("8_400w7")
region = Rect2(96, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4s3j4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44u2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36c1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xurv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekugk")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ugjet"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mr63"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldo88"]
atlas = ExtResource("30_ueden")
region = Rect2(32, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo20u"]
atlas = ExtResource("30_ueden")
region = Rect2(48, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyt0s"]
atlas = ExtResource("30_ueden")
region = Rect2(64, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_djcse"]
atlas = ExtResource("30_ueden")
region = Rect2(80, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukw1e"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_468jr"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyguy"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytb07"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_55g5m"]
atlas = ExtResource("30_ueden")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_27sfg"]
atlas = ExtResource("30_ueden")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_drjyi"]
atlas = ExtResource("30_ueden")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdnql"]
atlas = ExtResource("30_ueden")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nafh"]
atlas = ExtResource("30_ueden")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_klr7m"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7f63"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cvds"]
atlas = ExtResource("30_ueden")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mduyf"]
atlas = ExtResource("30_ueden")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv6he"]
atlas = ExtResource("30_ueden")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxaqk"]
atlas = ExtResource("30_ueden")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv8p6"]
atlas = ExtResource("30_ueden")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2i5h"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmggi"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vbo3"]
atlas = ExtResource("30_ueden")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ohu5"]
atlas = ExtResource("30_ueden")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_flt2u"]
atlas = ExtResource("30_ueden")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dyc5"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bmax"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rslek"]
atlas = ExtResource("30_ueden")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_70q0e"]
atlas = ExtResource("30_ueden")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7lma"]
atlas = ExtResource("30_ueden")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_arve4"]
atlas = ExtResource("30_ueden")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w478r"]
atlas = ExtResource("30_ueden")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwesy"]
atlas = ExtResource("30_ueden")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_evwom"]
atlas = ExtResource("30_ueden")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_841do"]
atlas = ExtResource("30_ueden")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ufvh"]
atlas = ExtResource("30_ueden")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_birmr"]
atlas = ExtResource("30_ueden")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_amlpn"]
atlas = ExtResource("30_ueden")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j58d8"]
atlas = ExtResource("30_ueden")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mptev"]
atlas = ExtResource("30_ueden")
region = Rect2(96, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2a5yk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugjet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mr63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldo88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo20u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyt0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djcse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukw1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_468jr")
}],
"loop": true,
"name": &"eatting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyguy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytb07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55g5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27sfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drjyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdnql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nafh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klr7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7f63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cvds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mduyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv6he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxaqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv8p6")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2i5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmggi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vbo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ohu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flt2u")
}],
"loop": true,
"name": &"sleepy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dyc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bmax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rslek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70q0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7lma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arve4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w478r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwesy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evwom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_841do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ufvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_birmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amlpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j58d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mptev")
}],
"loop": true,
"name": &"want to jump",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xuvse"]
atlas = ExtResource("34_bmbyj")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_072a4"]
atlas = ExtResource("34_bmbyj")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad4u1"]
atlas = ExtResource("34_bmbyj")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg3fm"]
atlas = ExtResource("34_bmbyj")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_egpja"]
atlas = ExtResource("34_bmbyj")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ad82"]
atlas = ExtResource("34_bmbyj")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1o5c"]
atlas = ExtResource("34_bmbyj")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h44bl"]
atlas = ExtResource("34_bmbyj")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_wak51"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuvse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_072a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad4u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg3fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egpja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ad82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1o5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h44bl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Field_Scene" type="Node2D"]

[node name="black_ground_water" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="black_ground_water"]
material = SubResource("ShaderMaterial_ek8lc")
offset_left = -128.0
offset_top = -256.0
offset_right = 128.0
offset_bottom = 240.0
texture = ExtResource("10_16vgn")
stretch_mode = 1

[node name="island" type="Sprite2D" parent="."]
texture = ExtResource("3_3qlga")

[node name="state_manager" type="Node2D" parent="."]
script = ExtResource("1_7df2t")
camera_zoom_out_scale = 2.5

[node name="CanvasLayer2" type="CanvasLayer" parent="state_manager"]

[node name="top_left_button" type="Button" parent="state_manager/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
offset_top = 150.0
offset_right = 192.0
offset_bottom = 230.0
text = "start"
script = ExtResource("2_c3gvt")

[node name="topleft_button_texture" type="Sprite2D" parent="state_manager/CanvasLayer2/top_left_button"]
scale = Vector2(3, 3)
texture = ExtResource("5_tdjih")
centered = false
offset = Vector2(-2, -3)
vframes = 5
frame = 4

[node name="bottom_button" type="Button" parent="state_manager/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 144.5
offset_top = 900.0
offset_right = 224.5
offset_bottom = 1028.0
text = "种植"
script = ExtResource("3_f7b5f")

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/bottom_button"]
position = Vector2(40, 72)
scale = Vector2(3, 3)
texture = ExtResource("7_qbutg")

[node name="AnimatedSprite2D" parent="state_manager/CanvasLayer2/bottom_button" instance=ExtResource("7_ex8uh")]
position = Vector2(40, 72)
animation = &"pressed"
frame = 0
frame_progress = 0.0

[node name="cancel_timer_button" type="Button" parent="state_manager/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 360.0
offset_top = 640.0
offset_right = 520.0
offset_bottom = 760.0
text = "Cancle timer
"
script = ExtResource("5_8mr6h")

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/cancel_timer_button"]
position = Vector2(80, 64)
scale = Vector2(3, 3)
texture = ExtResource("11_7pt45")

[node name="time_lable" parent="state_manager/CanvasLayer2" instance=ExtResource("7_88jv1")]
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
scale = Vector2(3, 3)
wait_time = 3
metadata/_edit_vertical_guides_ = [40.0]

[node name="harvest_button" type="Button" parent="state_manager/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 144.0
offset_top = 900.0
offset_right = 224.0
offset_bottom = 1024.0
text = "收获"
script = ExtResource("4_gunxn")

[node name="harvest_box_outline" type="Sprite2D" parent="state_manager/CanvasLayer2/harvest_button"]
position = Vector2(-23, 16)
scale = Vector2(3, 3)
texture = ExtResource("13_ixhkl")
centered = false

[node name="harvest_button" type="AnimatedSprite2D" parent="state_manager/CanvasLayer2/harvest_button"]
position = Vector2(40, 64)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_gfi1v")
frame = 3
frame_progress = 1.0

[node name="settalment_box" type="PanelContainer" parent="state_manager/CanvasLayer2"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 221.0
offset_top = -142.0
offset_right = 541.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_1x6et")

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/settalment_box"]
scale = Vector2(3, 3)
texture = ExtResource("16_vuc7v")
centered = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="state_manager/CanvasLayer2"]
visible = false
position = Vector2(304, 168)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_4s3j4")
animation = &"happy"
autoplay = "happy"
frame_progress = 0.121126

[node name="emoji" type="Control" parent="state_manager/CanvasLayer2"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(3, 3)
script = ExtResource("19_vg7v8")

[node name="emo_box" type="Sprite2D" parent="state_manager/CanvasLayer2/emoji"]
position = Vector2(100, 55)
texture = ExtResource("19_w5igd")

[node name="line" type="Sprite2D" parent="state_manager/CanvasLayer2/emoji/emo_box"]
position = Vector2(2.08165e-12, -30)
scale = Vector2(1, 3.36111)
texture = ExtResource("20_svcwf")

[node name="emo_box2" type="Sprite2D" parent="state_manager/CanvasLayer2/emoji"]
position = Vector2(100, 285)
texture = ExtResource("19_w5igd")

[node name="line" type="Sprite2D" parent="state_manager/CanvasLayer2/emoji/emo_box2"]
position = Vector2(2.08165e-12, 30)
scale = Vector2(1, 3.36111)
texture = ExtResource("20_svcwf")

[node name="timer_selceter" type="Control" parent="state_manager/CanvasLayer2"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -692.0
offset_right = -230.0
offset_bottom = -468.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("22_y6tqa")

[node name="select_timer_button" type="VBoxContainer" parent="state_manager/CanvasLayer2/timer_selceter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="twenty_four_min" type="Button" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button/twenty_four_min"]
scale = Vector2(3, 3)
texture = ExtResource("23_vayfk")
centered = false
hframes = 3

[node name="fourty_five_min" type="Button" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button/fourty_five_min"]
scale = Vector2(3, 3)
texture = ExtResource("23_vayfk")
centered = false
hframes = 3
frame = 1

[node name="test" type="Button" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button/test"]
scale = Vector2(3, 3)
texture = ExtResource("23_vayfk")
centered = false
hframes = 3
frame = 2

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2/timer_selceter/select_timer_button"]

[node name="select_timer_banner" type="Sprite2D" parent="state_manager/CanvasLayer2/timer_selceter"]
position = Vector2(195, 560)
scale = Vector2(3, 3)
texture = ExtResource("24_hkyps")

[node name="select_timer_pannel" type="Sprite2D" parent="state_manager/CanvasLayer2"]
position = Vector2(-200, 712)
scale = Vector2(3, 3)
texture = ExtResource("24_0h6yf")
vframes = 3
script = ExtResource("25_q83ki")

[node name="Box" type="Sprite2D" parent="state_manager/CanvasLayer2"]
scale = Vector2(3, 3)
texture = ExtResource("9_j88sr")
centered = false

[node name="Sprite2D" type="Sprite2D" parent="state_manager/CanvasLayer2"]

[node name="Debug" type="CanvasLayer" parent="."]
visible = false

[node name="Button" type="Button" parent="Debug"]
offset_right = 168.0
offset_bottom = 112.0
text = "显示"

[node name="Button2" type="Button" parent="Debug"]
offset_left = 176.0
offset_right = 344.0
offset_bottom = 112.0
text = "隐藏"

[node name="filed_manager" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("1_6ow38")

[node name="chicken" type="AnimatedSprite2D" parent="filed_manager"]
position = Vector2(32, -32)
sprite_frames = SubResource("SpriteFrames_2a5yk")
animation = &"eatting"
autoplay = "eatting"
frame_progress = 0.351726
flip_h = true

[node name="cursor" type="Sprite2D" parent="."]
position = Vector2(150, -60)
texture = ExtResource("2_xy56k")
offset = Vector2(2.08165e-12, -30)
script = ExtResource("4_2i84w")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("9_hj7l2")

[node name="filed_half" type="Sprite2D" parent="."]
texture = ExtResource("14_pikh5")

[node name="chicken2" type="AnimatedSprite2D" parent="filed_half"]
position = Vector2(-40, 32)
sprite_frames = SubResource("SpriteFrames_2a5yk")
animation = &"sleepy"
autoplay = "sleepy"
frame_progress = 0.625017

[node name="chicken3" type="AnimatedSprite2D" parent="filed_half"]
position = Vector2(-49, -41)
sprite_frames = SubResource("SpriteFrames_2a5yk")
animation = &"sleepy"
autoplay = "sleepy"
frame_progress = 0.625017
flip_h = true

[node name="chicken4" type="AnimatedSprite2D" parent="filed_half"]
position = Vector2(-13, 71)
sprite_frames = SubResource("SpriteFrames_2a5yk")
animation = &"jump"
autoplay = "sleepy"
frame_progress = 0.416238
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="filed_half"]
position = Vector2(44, 2)
sprite_frames = SubResource("SpriteFrames_wak51")
autoplay = "default"
frame_progress = 0.2921

[connection signal="enter_plant_state" from="state_manager" to="filed_manager" method="_on_state_manager_enter_plant_state"]
[connection signal="pause_timer" from="state_manager" to="state_manager/CanvasLayer2/time_lable" method="_on_state_manager_pause_timer"]
[connection signal="updata_plant_state" from="state_manager" to="filed_manager" method="_on_state_manager_updata_plant_state"]
[connection signal="pressed" from="state_manager/CanvasLayer2/top_left_button" to="state_manager" method="_on_top_left_button_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/bottom_button" to="filed_manager" method="_on_bottom_button_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/cancel_timer_button" to="state_manager" method="_on_cancel_timer_button_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/cancel_timer_button" to="filed_manager" method="_on_cancel_timer_button_pressed"]
[connection signal="label_time_out" from="state_manager/CanvasLayer2/time_lable" to="state_manager" method="_on_time_lable_label_time_out"]
[connection signal="pressed" from="state_manager/CanvasLayer2/harvest_button" to="state_manager" method="_on_harvest_button_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/harvest_button" to="state_manager/CanvasLayer2/harvest_button" method="_on_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/harvest_button" to="filed_manager" method="_on_harvest_button_pressed"]
[connection signal="select_time" from="state_manager/CanvasLayer2/timer_selceter" to="state_manager/CanvasLayer2/time_lable" method="_on_timer_selceter_select_time"]
[connection signal="select_time_finished" from="state_manager/CanvasLayer2/timer_selceter" to="state_manager" method="_on_timer_selceter_select_time_finished"]
[connection signal="pressed" from="state_manager/CanvasLayer2/timer_selceter/select_timer_button/twenty_four_min" to="state_manager/CanvasLayer2/timer_selceter" method="_on_twenty_four_min_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/timer_selceter/select_timer_button/fourty_five_min" to="state_manager/CanvasLayer2/timer_selceter" method="_on_fourty_five_min_pressed"]
[connection signal="pressed" from="state_manager/CanvasLayer2/timer_selceter/select_timer_button/test" to="state_manager/CanvasLayer2/timer_selceter" method="_on_test_pressed"]
[connection signal="harvest_finished" from="filed_manager" to="state_manager" method="_on_filed_manager_harvest_finished"]
[connection signal="plant_finished" from="filed_manager" to="state_manager" method="_on_filed_manager_plant_finished"]
